--- a/css/screen.css
+++ b/css/screen.css
@@ -21,7 +21,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif; /* 1 */
+  font-family: 'Lato', 'Raleway', sans-serif; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
@@ -30,7 +30,7 @@ textarea {
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
- */ 
+ */
 
 button,
 input { /* 1 */
@@ -192,6 +192,8 @@ img, audio, video {
 */
 
 html {
+  background-color:#862d86;
+  font-family: 'Roboto', 'Lato' sans-serif;
   font-size: 1.375em; /* 22px */
   line-height: 1.182em; /* 26px / ~ 120% */
   padding: 1.182em; /* 26px / ~ 120% */
@@ -200,10 +202,36 @@ html {
 
 label {
   display: block;
+  font-family: 'Roboto', 'Lato' sans-serif;
+  text-align: center;
+}
+
+p{
+    font-family: 'Roboto', 'Lato' sans-serif;
+    text-align: center;
+    font-size: 1.375em; /* 22px */
+    font-weight: bold;
+}
+
+h1 {
+  font-family: 'Lato', 'Raleway', sans-serif;
+  text-align: center;
+  color: #808080;
 }
 
 /* ===== LAYOUT STYLES ====== */
+@media screen and (max-width: 480px) {
+  body, html {
+    min-height: 100%;
+    }
+  input[type="submit"], input[type="email"]{
+    font-size: 1..375em;
+    width: 100%
+    background-color:#696969;
+  }
+}
 
+@media screen and (max-width: 960px)
 /* ===== MODULAR STYLES ===== */
 
 /* ===== STATE STYLES ======= */
